...
        public static let chevronRight = "chevronRightLarge"
        public static let chevronUp = "chevronUpLarge"
        public static let clipboard = "clipboardLarge"
        public static let competitiveness = "competitivenessLarge"
        public static let creditCard = "creditCardLarge"
        public static let criticalFill = "criticalFillLarge"
        public static let cross = "crossLarge"
        public static let delete = "deleteLarge"
        /* Ecosia: Review Device icons
        public static let deviceDesktop = "deviceDesktopLarge"
        public static let deviceDesktopSend = "deviceDesktopSendLarge"
        public static let deviceMobile = "deviceMobileLarge"
        */
...
