...
        leaveOverlayMode(didCancel: true)
    }
}

// MARK: - BrowserToolbarProtocol
extension URLBarView_V2: BrowserToolbarProtocol {
    var shareButton: UIButton { return _shareButton }
    var bookmarkButton: UIButton { return _bookmarkButton }
    var forwardButton: UIButton { return _forwardButton }
    var backButton: UIButton { return _backButton }
    var stopReloadButton: UIButton { return _stopReloadButton }

    var actionButtons: [UIButton] {
...
